--- a/build.gradle
+++ b/build.gradle
@@ -7,29 +7,24 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-    maven{
-        url "https://github.com/bonigarcia/webdrivermanager.git"
-    }
 }
 
 dependencies {
-    implementation 'junit:junit:4.13.1'
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
-    testImplementation("org.seleniumhq.selenium:selenium-java:4.11.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.3")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.3")
     testImplementation("org.seleniumhq.selenium:selenium-chrome-driver:4.11.0")
-    testImplementation("org.seleniumhq.selenium:selenium-api:4.11.0")
     testImplementation("com.codeborne:selenide:6.17.2")
-    //testImplementation('io.github.bonigarcia:webdrivermanager:5.3.2')
-    implementation("org.slf4j:slf4j-api:2.0.7")
+    testImplementation("org.slf4j:slf4j-api:2.0.7")
+    testImplementation("org.slf4j:slf4j-simple:2.0.7")
+    //implementation('io.github.bonigarcia:webdrivermanager:5.3.2')
 }
 
-task chrome(type: Test) {
-    systemProperties['selenide.browser'] = 'chrome'
-    systemProperties['selenide.headless'] = 'false'
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
 }
 
 test {
+    testLogging.showExceptions = true
+    testLogging.showStandardStreams = true
     useJUnitPlatform()
 }
